[package]
name = "commitment_equivalence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-poly-commit = "0.3.0"
ark-marlin = "0.3.0"
digest = { version = "0.9" }

[dev-dependencies]
blake2 = { version = "0.9", default-features = false }